# tic_tac_toe

./: CMakeLists.txt  interface.c  main.c  tictactoe.c  tictactoe.h
